# SDEV268PayrollApplication

./: .gitignore  README.md  main.py  payroll.db  pyproject.toml  requirements.txt  sample_time_entries.csv  setup_database.py
data/: sample_time_entries.csv
database/: auth.py  load_data.py  load_test_data.py  sample_data.json  schema.sql  test_database.py
docs/: database-setup.md  development-setup.md  employee-controller-api.md  flask-routes-api.md  security.md
docs/Project Documents/: ProjectPlan_Group3.docx  TestData_Group3.xlsx  UMLDiagrams_Group3.docx  UserDocumentation_Group3.docx
docs/uml-diagrams/: Final Project Group 3 UML diagram.drawio
src/: __init__.py
src/controllers/: __init__.py  employee_controller.py  payroll_controller.py
src/models/: __init__.py  base_model.py  employee.py  payroll.py  time_entry.py
src/routes/: __init__.py  admin.py  admin_time_entry.py  auth.py  employee.py  payroll.py
src/static/css/: PayrollStyle.css
src/templates/: base.html
src/templates/admin/: app_info.html  dashboard.html  employee_form.html  employee_list.html  employee_pay_view.html  employee_personal_view.html  time_entry_admin.html  time_entry_detail.html
src/templates/auth/: login.html
src/templates/employee/: dashboard.html  paycheck.html  paycheck_detail.html  payroll_history.html  time_entry.html
src/templates/payroll/: payroll_detail.html  payroll_list.html  (+1 more)
src/utils/: calculate_payroll.py  constants.py  generate_time_entry_data.py  load_time_entries.py  pdf_generator.py  setup_database.py
testing/: testing_log_complete.md  testing_log_initial_copy.md
tests/: conftest.py  test_auth.py  test_employee.py  test_models.py
(+24 files in other folders)
